--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 
 <main id="container">
     <app-detalle
-    [pokemon]="pokemonSeleccionado"
+    [(pokemon)]="pokemonSeleccionado"
     (clicked)="cambiarEstadoDetalle()"
     [abierto] = "detalle"
     [ngClass]="{abierto: detalle}"
