--- a/src/app/components/detalle/detalle.component.html
+++ b/src/app/components/detalle/detalle.component.html
@@ -1,14 +1,18 @@
-<div id="backdrop" [ngClass]="{escondido: !abierto}"></div>
+<div id="backdrop" [ngClass]="{escondido: !abierto}" (click)="clicked.emit()"></div>
 <div id="container">
     <div id="datos">
 
         <div class="area">
-            <app-tarjeta-pokemon [fullData]="pokemon">
+            <app-tarjeta-pokemon 
+            [fullData]="pokemon"
+            [seleccionado]="true"
+            >
             </app-tarjeta-pokemon>
+
+           
         </div>
         <div class="area">
-            <p><span class="etiqueta">Tipo</span><span class="tipo"
-                    *ngFor="let tipo of pokemon?.types">{{tipo.type.name}}</span></p>
+            <p><span class="etiqueta">Tipo</span><span class="tipo" *ngFor="let tipo of pokemon?.types">{{tipo.type.name}}</span></p>
             <p><span class="etiqueta">Altura</span>{{pokemon?.height}}'</p>
             <p><span class="etiqueta">Peso</span>{{pokemon?.weight}}lbs.</p>
         </div>
