--- a/src/app/components/tarjeta-pokemon/tarjeta-pokemon.component.html
+++ b/src/app/components/tarjeta-pokemon/tarjeta-pokemon.component.html
@@ -1,7 +1,7 @@
 <div id="container" [ngClass]="{seleccionado: seleccionado}">
     <img src="./../../../assets/images/flecha.png" id="flecha" *ngIf="seleccionado">
    
-    <div id="tarjeta" (click)="clickeado.emit(id)">
+    <div id="tarjeta" (click)="clickeado.emit(id)" [ngClass]="{seleccionado:seleccionado}">
         <div id="circulo"></div>
 <img src='https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/{{id}}.png' alt="">
 <span>No. {{id}} </span>
