--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,27 +1,22 @@
-
 <main id="container">
     <app-detalle
-    [(pokemon)]="pokemonSeleccionado"
+    [pokemon]="pokemonSeleccionado"
     (clicked)="cambiarEstadoDetalle()"
-    [abierto] = "detalle"
+    [abierto]="detalle"
     [ngClass]="{abierto: detalle}"
     ></app-detalle>
-    
-    <app-foto-pokemon 
-    [_pokemon]="pokemonSeleccionado"
+    <app-foto-pokemon
+    [pokemon]="pokemonSeleccionado"
     [ngClass]="{abierto: detalle}"
     ></app-foto-pokemon>
-    
     <div id="tarjetasContainer" #tarjetas (scroll)="onScroll($event)">
-        <app-tarjeta-pokemon *ngFor="let pokemon of listaPokemon"
-        [data]="pokemon"
-        [seleccionado]="pokemon.name === pokemonSeleccionado?.name"
-        (clickeado)="tarjetaClikeada($event)"
-        >
+      <app-tarjeta-pokemon *ngFor="let pokemon of listaPokemon"
+      [data]="pokemon"
+      [seleccionado]="pokemon.name === pokemonSeleccionado?.name"
+      (clickeado)="tarjetaClickeada($event)"
+      >
     </app-tarjeta-pokemon>
-    <img src="./../../../assets/images/spinner.svg" alt="Cargando" id="spinner" *ngIf="cargando">
-
+    <img src="./../../../assets/img/spinner.svg" alt="Cargando" id="spinner" *ngIf="cargando">
     </div>
-    
-</main>
-
+  </main>
+  
